@@ -1304,7 +1304,7 @@ const unsigned char _Py_M__importlib[] = {
     0,1,100,1,0,83,41,2,122,22,69,120,101,99,32,97,
     32,98,117,105,108,116,45,105,110,32,109,111,100,117,108,101,
     78,41,3,114,65,0,0,0,114,57,0,0,0,90,12,101,
-    120,101,99,95,100,121,110,97,109,105,99,41,2,114,19,0,
+    120,101,99,95,98,117,105,108,116,105,110,41,2,114,19,0,
     0,0,114,89,0,0,0,114,10,0,0,0,114,10,0,0,
     0,114,11,0,0,0,114,139,0,0,0,233,2,0,0,115,
     2,0,0,0,0,3,122,27,66,117,105,108,116,105,110,73,
